[package]
name = "rust-ipv6-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
ipnetwork = "0.20.0"
log = "0.4.21"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
